--- a/navigation/src/components/Home.css
+++ b/navigation/src/components/Home.css
@@ -1,3 +1,9 @@
-.home{
+.Home{
     min-height: 100vh;
 }
+.dark h1{
+    color: rgb(255, 255, 255);
+}
+/* .dark .Home{
+    background-color: #14213d;
+} */
