--- a/navigation/src/components/login.css
+++ b/navigation/src/components/login.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 .Login{
+   overflow-x: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -8,7 +9,7 @@
 .wrapper{
    width: 420px;
    height: 520px;
-   background-color:#224184;
+   background-color:#8e65e3e0;
    border: 2px solid rgb(255, 255, 255 ,.2);
    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
    color: #ffffff;
