--- a/navigation/src/components/login.css
+++ b/navigation/src/components/login.css
@@ -86,6 +86,7 @@
    width: 100%;
    height: 45px;
    background: #fff;
+   color: #000000;
    border: none;
    outline: none;
    border-radius: 40px;
