--- a/navigation/src/components/login.css
+++ b/navigation/src/components/login.css
@@ -9,7 +9,7 @@
 .wrapper{
    width: 420px;
    height: 520px;
-   background-color:#8e65e3e0;
+   background-color:#224184;
    border: 2px solid rgb(255, 255, 255 ,.2);
    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
    color: #ffffff;
