cards design done

--- a/navigation/src/components/createmem.css
+++ b/navigation/src/components/createmem.css
@@ -3,8 +3,8 @@
     margin-top: 10px;
     padding-top: 15px;
     min-height: 52vh;
-    color: #fff;
-    background-color:#224184;
+    color: #ffffff;
+    background-color:  #6f6fcf;
     border-radius: 20px;
     font-size: 17px;
     margin-bottom: 10px;
@@ -20,25 +20,31 @@ h2{
     border-radius: 15px;
     background-color: transparent;
     border-width: 2px;
-    color: #8e8b8b;
+    color: #ffffff;
 }
 .mb-3 input::placeholder{
-    color: #8e8b8b;
+    color: #ffffff;
     font-size: 16px;
 }
 .btn-form{
-    background-color: #fff;
+    background-color: #ffffff;
     color: black;
     font-weight: 600;
     border-radius: 35px;
     width: 100px;
 }
 label{
-    color: #ffffff;
     font-weight: 500;
 }
 .dark .container{
-    background-color:#224184;
+    background-color:#1D267D;
+    color: #ffffff;
+}
+.dark h2{
+    color: #ffffff;
+}
+.dark .form-label{
+    color: #ffffff;
 }
 @media(max-width:600px){
     .container-form{
